--- a/index.html
+++ b/index.html
@@ -4,11 +4,57 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App 2</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <div class="container">
+      <div class="card" style="width: 300">
+        <div class="card-body">
+          <div class="row">
+            <div class="col-4">
+              <h1>London</h1>
+              <h2>Date | Time</h2>
+              <h3>
+                <img
+                  src="http://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/sun.png"
+                  alt="Sunny"
+                  width="30px"
+                />
+                20°C
+              </h3>
+            </div>
+
+            <div class="col-3">
+              <form>
+                <input
+                  type="text"
+                  placeholder="Search"
+                  autocomplete="off"
+                  autofocus="on"
+                  
+                />
+              </form>
+              </div>
+
+              <div class="col-3">
+                <form>
+                <input type="submit" value="Search" />
+                </form>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="src/app.js"></script>
   </body>
