--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="card-body">
           <div class="row">
             <div class="col-4">
-              <p>Date | Time</p>
-              <h1 class="city-result">London</h1>
+              <p class="date-time">Date | Time</p>
+              <h1 class="city-result" id="city-result">London</h1>
       
               
             </div>
@@ -56,7 +56,7 @@
 
         <div class="row">
             <div class="col-4">
-             <h1>
+             <h1 class="temperature" id="temperature">
                 <img
                   src="http://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/sun.png"
                   alt="Sunny"
