fixed padding to entire card

--- a/index.html
+++ b/index.html
@@ -135,5 +135,16 @@
       >
       by Shanay Hazell
     </div>
+
+     <div class="website" id="website">
+       <small>
+      <a href="https://dulcet-dango-493aee.netlify.app/" target="blank"
+        >Link to Website</a
+      >
+      for developer use only while in development
+   
+    </small> 
+  </div>
+  
   </body>
 </html>
