background color set
backup before other changes

--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
                   src="http://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/sun.png"
                   alt="Sunny"
                   width="30px"
+                  class="float-left"
                 />
                 20
-                <span class="units">
-                  <a href="#" class="units" id="celsius">°C </a> |
-                  <a href="#" class="units" id="fahrenheit"> °F</a>
+                <span class="unit">
+                  <a href="#" class="celsius" id="celsius">°C </a> |
+                  <a href="#" class="fahrenheit" id="fahrenheit"> °F</a>
                 </span>
               </h1>
             </div>
@@ -145,6 +146,6 @@
    
     </small> 
   </div>
-  
+
   </body>
 </html>
