Added humidity element

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <div class="col-4">
               <h4 class="description" id="description">Cloudy</h4>
               <h4 class="forecast" id="forecast">-1 | -10</h4>
+               <h4 class="humidity" id="humidity">humidity 83%</h4>
             </div>
           </div>
           
