Added forecast elements

--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
                   <a href="#" class="units" id="fahrenheit"> °F</a>
                 </span> 
              </h1>
+             <h4 class="description" id="description">Cloudy</h4>
             </div>
             <div class="col-4">
-              <h4 class="description" id="description">Cloudy</h4>
-              <h4 class="forecast" id="forecast">-1 | -10</h4>
-               <h4 class="humidity" id="humidity">humidity 83%</h4>
+              <h4 class="forecast"> <span class="low-forecast" id="low-forecast">
+                -1</span> | <span class="high-forecast" id="high-forecast"> -10</span> </h4>
+               <h4 class="humidity"> humidity<span class="humidity" id="humidity">83 </span>%</h4>
             </div>
           </div>
           
