Added emoji to html

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                   alt="Sunny"
                   width="30px"
                   class="float-left"
+                  id="weather-icon"
                 />
                 20 
                 </h1>
