Fixed HTML of temperature, icon and units

--- a/index.html
+++ b/index.html
@@ -61,30 +61,24 @@
         </div>
 
         <div class="row">
-          <div class="col-4">
-            <div class="weather-icon">
+          <div class="col-6">
+            <div class="clearfix weather-icon">
               <img
                 style="vertical-align: middle"
                 src="http://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/sun.png"
                 alt="weather icon"
                 width="30px"
-                class="icon"
+                class="float-left"
                 id="weather-icon"
               />
-
-              <div
-                style="vertical-align: middle"
-                class="temperature"
-                id="temperature"
-              >
-                20
-              </div>
-            </div>
-            <span style="vertical-align: middle" class="units">
-              <a href="#" class="units" id="celsius">°C </a>
-
-              <a href="#" class="units" id="fahrenheit"> °F</a>
+ 
+ 
+                <strong id="temperature" style="vertical-align: middle"> 20 </strong>
+              
+   
+            <span class="units">°C | <a href="#"> °F </a>        
             </span>
+          
 
             <h4 class="description" id="description">Cloudy</h4>
           </div>
