Update the alt (not working)
the setAttribute worked when finding the src, but will not work to find the alt.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="clearfix weather-icon">
               <img
                 style="vertical-align: middle"
-                src="http://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/sun.png"
+                src=""
                 alt="weather icon"
                 width="30px"
                 class="float-left"
