Fixed placement of search bar, search button, button

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 class="search-bar"
                 id="search-bar"
               />
+
               <input
                 type="submit"
                 value="Search"
@@ -60,39 +61,41 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-6">
-            <div class="clearfix weather-icon">
-              <img
-                style="vertical-align: middle"
-                src=""
-                alt="weather icon"
-                width="30px"
-                class="float-left"
-                id="weather-icon"
-              />
- 
- 
-                <strong id="temperature" style="vertical-align: middle"> 20 </strong>
-              
-   
-            <span class="units">°C | <a href="#"> °F </a>        
-            </span>
-          
+        <div class="col-6">
+          <div class="clearfix weather-icon">
+            <img
+              style="vertical-align: middle"
+              src=""
+              alt="weather icon"
+              width="30px"
+              class="float-left"
+              id="weather-icon"
+            />
+
+            <strong id="temperature" style="vertical-align: middle">
+              20
+            </strong>
+
+            <span class="units">°C | <a href="#"> °F </a> </span>
 
             <h4 class="description" id="description">Cloudy</h4>
           </div>
-          <div class="col-4">
-            <h4 class="forecast">
+
+          <div class="col-6">
+            <div class="forecast">
               <span class="low-forecast" id="low-forecast"> -1</span> |
               <span class="high-forecast" id="high-forecast"> -10</span>
-            </h4>
-            <h4 class="humidity">
-              Humidity<span class="humidity" id="humidity">83 </span>%
-            </h4>
-            <h4 class="wind">
-              Wind Speed <span class="wind" id="wind"> 5 </span> kM/h
-            </h4>
+            </div>
+          </div>
+          <div class="col-6"></div>
+          <div class="humidity">
+            Humidity<span class="humidity" id="humidity">83 </span>%
+          </div>
+        </div>
+
+        <div class="col-6">
+          <div class="wind">
+            Wind Speed <span class="wind" id="wind"> 5 </span> kM/h
           </div>
         </div>
 
