--- a/index.html
+++ b/index.html
@@ -62,40 +62,40 @@
         </div>
 
         <div class="col-6">
-          <div class="clearfix weather-icon">
-            <img
-              style="vertical-align: middle"
-              src=""
-              alt="weather icon"
-              width="30px"
-              class="float-left"
-              id="weather-icon"
-            />
+          <img
+            style="vertical-align: middle"
+            src=""
+            alt="weather icon"
+            width="30px"
+            class="float-left"
+            id="weather-icon"
+          />
 
-            <strong id="temperature" style="vertical-align: middle">
-              20
-            </strong>
+          <strong
+            class="temperature"
+            id="temperature"
+            style="vertical-align: middle"
+          >
+            20
+          </strong>
 
-            <span class="units">°C | <a href="#"> °F </a> </span>
+          <span class="units">°C | <a href="#"> °F </a> </span>
 
-            <h4 class="description" id="description">Cloudy</h4>
-          </div>
-
-          <div class="col-6">
-            <div class="forecast">
-              <span class="low-forecast" id="low-forecast"> -1</span> |
-              <span class="high-forecast" id="high-forecast"> -10</span>
-            </div>
-          </div>
-          <div class="col-6"></div>
-          <div class="humidity">
-            Humidity<span class="humidity" id="humidity">83 </span>%
-          </div>
+          <h4 class="description" id="description">Cloudy</h4>
         </div>
 
         <div class="col-6">
+          <div class="forecast">
+            <span class="low-forecast" id="low-forecast"> -1</span> |
+            <span class="high-forecast" id="high-forecast"> -10</span>
+          </div>
+
+          <div class="humidity">
+            Humidity<span class="humidity" id="humidity">83 </span>%
+          </div>
+
           <div class="wind">
-            Wind Speed <span class="wind" id="wind"> 5 </span> kM/h
+            Wind Speed <span class="wind" id="wind"> 5 </span> km/h
           </div>
         </div>
 
