Added weather conversion and active classes to F and C

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <img
             style="vertical-align: middle"
             src=""
-            alt="weather icon"
+            alt="weather-icon"
             width="30px"
             class="float-left"
             id="weather-icon"
@@ -81,7 +81,11 @@
             20
           </strong>
 
-          <span class="units">°C | <a href="#"> °F </a> </span>
+          <span class="units">
+            <a href="#" class="active" id="celsius">°C </a>
+
+            <a href="#" id="fahrenheit"> °F </a>
+          </span>
 
           <h4 class="description" id="description">Cloudy</h4>
         </div>
