Added function resetUnits
If you changed the units to F then searched a new city, it would show up as the new city temperature in C, but F would still be active (color black), appearing inaccurate.
Fixed this issue.

--- a/index.html
+++ b/index.html
@@ -55,9 +55,6 @@
                   id="search-button"
                 />
 
-                <!-- <button type="button" class="btn btn-primary">
-                  Use Current Location
-                </button> -->
               </div>
             </div>
           </form>
@@ -81,7 +78,7 @@
             20
           </strong>
 
-          <span class="units">
+          <span class="units" id="units">
             <a href="#" class="active" id="celsius">°C </a>
 
             <a href="#" id="fahrenheit"> °F </a>
